# discord-comping-bot

./: main.py  missing_counties_log.csv  pyproject.toml  requirements.txt  reventure-metro-data.csv
utils/: address_tools.py  comps.py  geodata.py  pitch_generator.py  valuation.py  zpid_finder.py
